--- a/Vault-Tec Amber/theme.css
+++ b/Vault-Tec Amber/theme.css
@@ -59,9 +59,9 @@
     --background-modifier-error: #cc3300;
     --background-modifier-error-hover: #dd5533;
     
-    --text-normal: #664400;
-    --text-muted: #996600;
-    --text-faint: #888888;
+    --text-normal: #442200;
+    --text-muted: #664400;
+    --text-faint: #886600;
     --text-error: #cc3300;
     --text-accent: #cc6600;
     --text-accent-hover: #ee7700;
