--- a/Wasteland Green/theme.css
+++ b/Wasteland Green/theme.css
@@ -63,7 +63,7 @@
     
     --text-normal: #004400;
     --text-muted: #006600;
-    --text-faint: #888888;
+    --text-faint: #226622;
     --text-error: #cc0000;
     --text-accent: #006600;
     --text-accent-hover: #008800;
